// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subscribing to the DOM should clear all DOM nodes 1`] = `[]`;

exports[`Subscribing to the DOM should correctly recreate nodes after clean 1`] = `
[
  {
    "_media": "",
    "_support": false,
    "_type": "RULE",
    "style": {
      "0_.a": {
        "color": "blue",
      },
    },
  },
  {
    "_media": "(min-width: 300px)",
    "_support": false,
    "_type": "RULE",
    "style": {
      "0_.b": {
        "color": "red",
      },
    },
  },
  {
    "_media": "(min-width: 300px) and (max-height: 500px)",
    "_support": false,
    "_type": "RULE",
    "style": {
      "0_.c": {
        "color": "yellow",
      },
    },
  },
  {
    "_type": "KEYFRAME",
    "style": "@-webkit-keyframes k1{from{color:red}to{color:blue}}@-moz-keyframes k1{from{color:red}to{color:blue}}@keyframes k1{from{color:red}to{color:blue}}",
  },
]
`;

exports[`Subscribing to the DOM should render keyframes to a DOM node 1`] = `
[
  {
    "_type": "KEYFRAME",
    "style": "@-webkit-keyframes k1{from{color:red}to{color:blue}}@-moz-keyframes k1{from{color:red}to{color:blue}}@keyframes k1{from{color:red}to{color:blue}}",
  },
]
`;

exports[`Subscribing to the DOM should render media rules and support rules to single DOM nodes (devMode) 1`] = `
[
  {
    "_media": "",
    "_support": false,
    "_type": "RULE",
    "style": {
      "0_.a": {
        "color": "blue",
      },
    },
  },
  {
    "_media": "",
    "_support": "true",
    "_type": "RULE",
    "style": {
      "(display: flex)": {
        "0_.b": {
          "display": "flex",
        },
      },
    },
  },
  {
    "_media": "(min-width: 300px)",
    "_support": false,
    "_type": "RULE",
    "style": {
      "0_.c": {
        "color": "red",
      },
    },
  },
  {
    "_media": "(min-width: 300px) and (max-height: 500px)",
    "_support": false,
    "_type": "RULE",
    "style": {
      "0_.d": {
        "color": "yellow",
      },
    },
  },
  {
    "_media": "(min-width: 300px) and (max-height: 500px)",
    "_support": "true",
    "_type": "RULE",
    "style": {
      "(display: grid)": {
        "0_.e": {
          "display": "grid",
        },
      },
    },
  },
]
`;

exports[`Subscribing to the DOM should render rules to a DOM node 1`] = `
[
  {
    "_media": "",
    "_support": false,
    "_type": "RULE",
    "style": {
      "0_.a": {
        "background-color": "red",
      },
      "1_.b": {
        "color": "blue",
      },
      "2_.c:hover": {
        "color": "red",
      },
    },
  },
]
`;

exports[`Subscribing to the DOM should render static styles to a DOM node 1`] = `
[
  {
    "_type": "STATIC",
    "style": "body, html{background-color:red;color:blue}",
  },
]
`;
